--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "dependencies": {
     "antd": "^5.8.6",
     "axios": "^1.5.0",
+    "bcrypt-inzi": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^5.7.0",
     "nanoid": "^4.0.2",
-    "openai": "^4.8.0"
+    "openai": "^4.8.0",
+    "react-router-dom": "^6.16.0"
   }
 }
